fix: unnecessary scrollbar for the x axis in the Playlist component

--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   overflow-y: scroll;
+  overflow-x: hidden;
   width: 37%;
   max-height: 950px;
   padding: 2.27rem 1.16rem;
